[package]
name = "spotify-playback"
version = "0.1.0"
edition = "2021"
authors = ["Ashhhleyyy <ash@ashhhleyyy.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.11", features = ["client-reqwest", "reqwest-rustls-tls", "env-file", "cli"], default-features = false }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
anyhow = "1"
blinkt = "0.6"
